--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <title>Movie</title>
+    <title>CineFlix</title>
 </head>
 
 <body>
     <header>
         <nav id="nav">
             <h1 onClick="window.location.href=window.location.href" class="logo">
-                Movi<span class="primary-color">Flix</span>
+                Cine<span class="primary-color">Flix</span>
             </h1>
 
             <form id="from">
